2003-08-14  Maciej Stachowiak  <mjs@apple.com>

        Fixed by Darin, reviewed by me (and originally figured out by John).

	- fixed 3375592 - New Yahoo Maps doesn't work right
	
        * kwq/KWQTextCodec.mm:
        (KWQTextDecoder::convertUTF16): Don't pass through null characters.
        (KWQTextDecoder::appendOmittingNullsAndBOMs): Ditto.
        (KWQTextDecoder::convertUsingTEC): Ditto.

=== Safari-93 ===

2003-08-14  Vicki Murley  <vicki@apple.com>

        Reviewed by John. 

        * WebCore.pbproj/project.pbxproj: deleted WebCore.order from the project.

2003-08-14  Vicki Murley  <vicki@apple.com>

        Reviewed by John. 

        * WebCore.order: Removed. We now point to the WebCore order file in /AppleInternal/OrderFiles.
        * WebCore.pbproj/project.pbxproj: change sectorder flag to point to /AppleInternal/OrderFiles/WebCore.order

2003-08-14  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin

	Fix for this bug:

	<rdar://problem/3095893>: Image Capture: "Build web page" doesn't work with Japanese folder name.

        * kwq/KWQKURL.mm:
        (KURL::getNSURL): Try UTF-8 first and fallback to ISO Latin-1 when creating an NSURL.
	This will handle the two-byte character in file name case mentioned in the bug.

2003-08-14  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        - fixed 3375270 -- writing to frame parent from a button press crashes in viewportMousePressEvent
        
        The fix turned out to be to ref the view around handling events in the view, since processing
        the event could cause the view and part to go away. Since the view refs the part, ref'ing just
        the view seems to work perfectly.
        
        * kwq/KWQKHTMLPart.mm: Fixed namespace access to use "using" instead of explicit namespaces.
        (KWQKHTMLPart::setView): Not-entirely-related cleanup. Use the "ref before deref" idiom here.
        (KWQKHTMLPart::sendResizeEvent): Ref the KHTMLView while sending the resize event.